--- a/P-06 css inicio/style.css
+++ b/P-06 css inicio/style.css
@@ -32,4 +32,7 @@ p{
     width: 400px;
     text-align: center;
     margin-left: 470px;
+    line-height: 70px;
+    font-weight: bolder;
+    font-family: monospace;
 }
