--- a/Atividades/Ac-3 Margin, Padding, Border/style.css
+++ b/Atividades/Ac-3 Margin, Padding, Border/style.css
@@ -23,3 +23,10 @@ ul li a{
     border: 1px solid black;
     border-radius: 20px;
 }
+
+a:hover{
+    background-color: blue;
+}
+a:focus{
+    border: 3px solid black;
+}
