--- a/P-40 Lista de tarefas/style.css
+++ b/P-40 Lista de tarefas/style.css
@@ -25,6 +25,10 @@ header{
     align-items: center;
     height: 100%;
 }
+main{
+    display: flex;
+    flex-direction: column;
+}
 .tasks{
     display: flex;
     background-color: white;
@@ -39,7 +43,7 @@ header{
     padding: 30px 50px;
 }
 
-.tasks h2{
+h2{
     font-family:'Quicksand', sans-serif;;
     margin-bottom: 10px;
     font-size: 30px;
@@ -58,4 +62,90 @@ header{
     list-style: none;
     width: 98%;
     height: 60px;
+}
+
+.adicionar{
+    margin-top: 50px;
+    background-color: white;
+    -webkit-box-shadow: -5px 47px 88px -50px rgba(0,0,0,0.52);
+    -moz-box-shadow: -5px 47px 88px -50px rgba(0,0,0,0.52);
+    box-shadow: -5px 47px 88px -50px rgba(0,0,0,0.52);
+    border-radius: 10px;
+    width: 700px;
+    height: 100%;
+    padding: 20px;
+}
+
+.adicionar .novoItem{
+    margin-top: 30px;
+    font-size: 26px;
+    font-weight: lighter;
+    padding-left: 30px;
+    width: 300px;
+    height: 50px;
+    border-radius: 10px;
+    background-color: #F1F3F5;
+    border: solid 1px transparent;
+}
+
+.adicionar .tipo{
+    margin-top: 30px;
+    margin-right: 40px;
+    margin-left: 20px;
+    font-size: 26px;
+    padding-left: 15px;
+    width: 300px;
+    height: 50px;
+    border-radius: 10px;
+    background-color: #F1F3F5;
+    border: solid 1px transparent;
+    cursor: pointer;
+}
+    #uniqueButton{
+        display: flex;
+        justify-content: center;
+        background-color: white;
+        -webkit-box-shadow: -5px 47px 88px -50px rgba(0,0,0,0.52);
+        -moz-box-shadow: -5px 47px 88px -50px rgba(0,0,0,0.52);
+        box-shadow: -5px 47px 88px -50px rgba(0,0,0,0.52);
+        border-radius: 10px;
+        width: 700px;
+        height: 100%;
+        padding: 20px;
+    }
+#uniqueButton .addItem{
+    font-size: 20px;
+    color: white;
+    width: 100%;
+    height: 60px;
+    border-radius: 5px;
+    background-color: #3B5BDB;
+    border:solid 1px transparent;
+    cursor: pointer;
+}
+#uniqueButton .addItem:active{
+    background-color: white;
+    color: black;
+    border: solid 1px black;
+}
+li{
+    display: flex;
+    justify-content: space-between;
+}
+
+.redBtn{
+    padding: 0;
+    text-align: center;
+    color: white;
+    width: 50px;
+    height: 50px;
+    border: 1px solid transparent;
+    background-color: red;
+    border-radius: 100%;
+    cursor: pointer;
+}
+.redBtn:active{
+    color: black;
+    border: solid 1px black;
+    background-color: white;
 }
