--- a/P-40 Lista de tarefas/style.css
+++ b/P-40 Lista de tarefas/style.css
@@ -13,12 +13,16 @@ header{
     padding: 0;
     margin: 0;
     display: flex;
-    justify-content: center;
     -webkit-box-shadow: -5px 47px 88px -27px rgba(0,0,0,0.52);
     -moz-box-shadow: -5px 47px 88px -27px rgba(0,0,0,0.52);
     box-shadow: -5px 47px 88px -27px rgba(0,0,0,0.52);
 }
-
+header nav{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
 .allTasks{
     display: flex;
     justify-content: center;
@@ -43,11 +47,46 @@ main{
     padding: 30px 50px;
 }
 
-h2{
+.title{
+    padding: 0;
+    margin: 20px 10px;
     font-family:'Quicksand', sans-serif;;
-    margin-bottom: 10px;
     font-size: 30px;
     font-weight: bold;
+}
+
+.search{
+    width: 350px;
+    height: 42px;
+    border-radius: 10px;
+    border: 1px solid transparent;
+    background-color: #F1F3F5;
+    padding-left: 15px;
+    font-size: 22px;
+}
+
+.searchTable{
+    display: flex;
+    align-items: center;
+}
+.searchBtn{
+    font-size: 20px;
+    margin-left: 10px;
+    width: 150px;
+    height: 30px;
+    background-color: white;
+    border: solid 1px black;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.searchBtn:active{
+    background-color: black;
+    color: white;
+}
+
+#headTitle{
+    color: #3B5BDB;
 }
 
 .listItem{
